name:                keenser
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jamesdabbs/keenser#readme
license:             BSD3
license-file:        LICENSE
author:              James Dabbs
maintainer:          jamesdabbs@gmail.com
copyright:           2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , bytestring
                     , containers
                     , hedis
                     , hostname
                     , lifted-base
                     , monad-control
                     , monad-logger
                     , monad-logger-prefix
                     -- TODO: this should be Crytpo.Random or something
                     , random-extras
                     , random-fu
                     , random-source
                     , scientific
                     , stm
                     , text
                     , time
                     , transformers
                     , transformers-base
                     , unix
  default-language:    Haskell2010

executable keenser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , keenser
                     , aeson
                     , bytestring
                     , fast-logger
                     , hedis
                     , monad-logger
                     , text
                     , unix
  default-language:    Haskell2010

test-suite keenser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , keenser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jamesdabbs/keenser
